# bazel-lsp

./: .bazelrc  .bazelversion  .gitattributes  .gitignore  BUILD  CHANGELOG.md  Cargo.toml  MODULE.bazel  README.md  renovate.json
.github/workflows/: build-release.yml  release-please.yml  rust.yml
bazel/: hermetic_cc_toolchain.patch
fixtures/bzlmod/root/: BUILD  MODULE.bazel
fixtures/simple/root/: BUILD
fixtures/simple/root/foo/: BUILD
prost/: BUILD
src/: bazel.rs  builtin.rs  client.rs  eval.rs  file_type.rs  label.rs  main.rs  test_fixture.rs  workspace.rs
src/builtin/: BUILD  builtin.pb  builtin.pbtxt  builtin.proto  default_build_language.pb  default_build_language.pbtxt  pbtxt_to_pb.bzl
