[package]
name = "bazel-lsp"
version = "0.6.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
cc = "1.1.13"
clap = { version = "4.4.18", features = ["derive"] }
either = "1.9.0"
hex = "0.4.3"
itertools = "0.12.0"
lsp-types = "0.94.1"
prost = "0.12.3"
prost-types = "0.12.3"
protoc-gen-prost = "0.2.3"
protoc-gen-tonic = "0.3.0"
ring = "0.17.7"
serde = "1.0.195"
serde_json = "1.0.111"
starlark = { git = "https://github.com/facebook/starlark-rust.git", branch = "main" }
starlark_lsp = { git = "https://github.com/facebook/starlark-rust.git", branch = "main" }
starlark_syntax = { git = "https://github.com/facebook/starlark-rust.git", branch = "main" }
thiserror = "1.0.56"
tonic = "0.10.2"

[patch.crates-io]
# Release v1.1.13 of https://github.com/rust-lang/cc-rs/releases/tag/cc-v1.1.13
# patched with support for *-unknown-linux-gnu targets.
# Patch://github.com/Asana/cc-rs/commit/3cd7c687771196bd2e5d36e5446bfcfa801c08ef
# Zig bug: https://github.com/ziglang/zig/issues/4911
cc = { git = "https://github.com/Asana/cc-rs.git", commit = "3cd7c687771196bd2e5d36e5446bfcfa801c08ef" }
