[package]
name = "bazel-lsp"
version = "0.6.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
cc = "1.1.13"
clap = { version = "4.4.18", features = ["derive"] }
either = "1.9.0"
hex = "0.4.3"
htmd = "0.2.0"
itertools = "0.14.0"
lsp-types = "0.94.1"
prost = "0.13.0"
prost-types = "0.13.0"
protoc-gen-prost = "0.4.0"
protoc-gen-tonic = "0.4.0"
ring = "0.17.7"
serde = "1.0.195"
serde_json = "1.0.111"
starlark = { git = "https://github.com/facebook/starlark-rust.git", branch = "main" }
starlark_lsp = { git = "https://github.com/facebook/starlark-rust.git", branch = "main" }
starlark_syntax = { git = "https://github.com/facebook/starlark-rust.git", branch = "main" }
thiserror = "1.0.56"
tonic = "0.13.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
