bazel_dep(name = "rules_rust", version = "0.42.1")

archive_override(
    module_name = "rules_rust",
    urls = ["https://github.com/bazelbuild/rules_rust/archive/e3f6258b1e1660652ae044f01c6dac074f9fb206.tar.gz"],
    strip_prefix = "rules_rust-e3f6258b1e1660652ae044f01c6dac074f9fb206",
    integrity = "sha256-c1DP/HTQSBXz9GL134NL6Bw7JNulPQVnP6UbTn3BG/4="
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.77.2"],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

rust_host_tools = use_extension("@rules_rust//rust:extensions.bzl", "rust_host_tools")

use_repo(rust_host_tools, "rust_host_tools")

crate = use_extension(
    "@rules_rust//crate_universe:extension.bzl",
    "crate",
)
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "Cargo.lock",
    manifests = ["Cargo.toml"],
)
use_repo(crate, "crates")

crate.annotation(
    crate = "protoc-gen-prost",
    gen_binaries = ["protoc-gen-prost"],
)

crate.annotation(
    crate = "protoc-gen-tonic",
    gen_binaries = ["protoc-gen-tonic"],
)

bazel_dep(
    name = "rules_bazel_integration_test",
    version = "0.23.0",
    dev_dependency = True,
)

bazel_dep(name = "protobuf", version = "23.1")

register_toolchains("//prost:prost_toolchain")
